unpackaged/main/default/objects/Lead/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operating Budget</fullName>
            </value>
            <value>
                <fullName>Maintenance Expenditure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>