unpackaged/main/default/objects/Lead/fields/IIR_Link__c.field-meta.xml
<CustomField>
    <fullName>IIR_Link__c</fullName>
    <label>IIR Link</label>
    <type>Url</type>
</CustomField>