unpackaged/main/default/objects/Lead/fields/PEC_Report__c.field-meta.xml
<CustomField>
    <fullName>PEC_Report__c</fullName>
    <label>PEC Report #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>