unpackaged/main/default/objects/Lead/fields/Project_TIV__c.field-meta.xml
<CustomField>
    <fullName>Project_TIV__c</fullName>
    <label>Project TIV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>