unpackaged/main/default/objects/Lead/fields/Projected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Close_Date__c</fullName>
    <label>Projected Close Date</label>
    <type>Date</type>
</CustomField>