unpackaged/main/default/objects/Lead/fields/Projected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start_Date__c</fullName>
    <label>Projected Start Date</label>
    <type>Date</type>
</CustomField>