unpackaged/main/default/objects/Lead/fields/Salesman_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Estimate__c</fullName>
    <label>Salesman Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>