unpackaged/main/default/objects/Lead/validationRules/New_Lead_Requires_Phone_Or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Lead_Requires_Phone_Or_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISNULL ( Email ), ISNULL(  Phone ))</errorConditionFormula>
    <errorMessage>Either a phone number or an email is required to add a new lead.</errorMessage>
</ValidationRule>