unpackaged/main/default/objects/Lead/listViews/My_New_Leads.listView-meta.xml
<ListView>
    <fullName>My_New_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My New Leads</label>
</ListView>