unpackaged/main/default/objects/Lead/listViews/Trade_Show_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Trade_Show_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Trade Show Leads</label>
    <queue>Trade_Show_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>